# webcounter

./: README.md  log.html  output.xml  pyproject.toml  report.html
results/: log.html  output.xml  report.html
src/: app.py  counter.py
src/templates/: index.html
src/tests/: increment.robot  reset.robot  resource.robot
